--- a/.github/workflows/linter.yaml
+++ b/.github/workflows/linter.yaml
@@ -20,4 +20,5 @@ jobs:
         env:
           VALIDATE_ALL_CODEBASE: false
           DEFAULT_BRANCH: main
+          FILTER_REGEX_INCLUDE: .*.json
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
