build: remove quotes around branch name

--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -1,7 +1,7 @@
 name: Documentation
 on:
   push:
-    branches: [ "main" ]
+    branches: [main]
   workflow_dispatch: # Allows you to run this workflow manually from the Actions tab
 jobs:
   generate_deploy_documentation:
