--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -2,7 +2,8 @@ name: Documentation
 on:
   push:
     branches: [main]
-  workflow_dispatch: # Allows you to run this workflow manually from the Actions tab
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 jobs:
   generate_deploy_documentation:
     runs-on: ubuntu-latest
