--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -1,11 +1,11 @@
-name: Documentation
+name: Generate and deploy static documentation site
 on:
   push:
     branches: [main]
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 jobs:
-  generate_documentation:
+  generate_docs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -24,8 +24,8 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           path: 'docs/'
-  deploy_documentation:
-    needs: generate_documentation
+  deploy_docs:
+    needs: generate_docs
     runs-on: ubuntu-latest
     permissions:
       pages: write
